@@ -2,114 +2,126 @@ package com.quindiflix.controller;
 
 import com.fasterxml.jackson.databind.ObjectMapper;
 import com.quindiflix.dto.TemporadaDTO;
+import com.quindiflix.exception.BadRequestException;
 import com.quindiflix.service.TemporadaService;
+import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.autoconfigure.web.servlet.WebMvcTest;
-import org.springframework.boot.test.mock.mockito.MockBean;
+import org.springframework.boot.test.mock.mockito.MockBean; // <-- CAMBIO: Importación para 3.3.0
 import org.springframework.http.MediaType;
 import org.springframework.test.web.servlet.MockMvc;
 
-import java.util.Arrays;
+import java.util.List;
 import java.util.Optional;
 
 import static org.mockito.ArgumentMatchers.any;
-import static org.mockito.Mockito.*;
+import static org.mockito.ArgumentMatchers.eq;
+import static org.mockito.Mockito.doNothing;
+import static org.mockito.Mockito.when;
 import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.*;
 import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.*;
 
 @WebMvcTest(TemporadaController.class)
-public class TemporadaControllerTest {
+class TemporadaControllerTest {
 
     @Autowired
     private MockMvc mockMvc;
 
-    @MockBean
+    @MockBean // <-- CAMBIO: De @MockitoBean a @MockBean
     private TemporadaService service;
 
     @Autowired
     private ObjectMapper objectMapper;
 
-    @Test
-    public void testFindAll() throws Exception {
-        TemporadaDTO dto1 = new TemporadaDTO(1, 1, "Temporada 1");
-        TemporadaDTO dto2 = new TemporadaDTO(2, 2, "Temporada 2");
+    private TemporadaDTO temporadaDTO;
 
-        when(service.findAll()).thenReturn(Arrays.asList(dto1, dto2));
+    @BeforeEach
+    void setUp() {
+        temporadaDTO = new TemporadaDTO();
+        temporadaDTO.setIdTemporada(1);
+        temporadaDTO.setNumeroTemporada(1);
+        temporadaDTO.setTitulo("El despertar de los datos");
+        temporadaDTO.setIdContenido(10); // ID de la Serie/Pódcast
+    }
+
+    @Test
+    void testFindAll() throws Exception {
+        when(service.findAll()).thenReturn(List.of(temporadaDTO));
 
         mockMvc.perform(get("/api/temporadas"))
                 .andExpect(status().isOk())
-                .andExpect(content().contentType(MediaType.APPLICATION_JSON))
-                .andExpect(jsonPath("$.length()").value(2));
+                .andExpect(jsonPath("$[0].idTemporada").value(1))
+                .andExpect(jsonPath("$[0].titulo").value("El despertar de los datos"));
     }
 
     @Test
-    public void testFindById() throws Exception {
-        TemporadaDTO dto = new TemporadaDTO(1, 1, "Temporada 1");
-
-        when(service.findById(1)).thenReturn(Optional.of(dto));
+    void testFindById_Found() throws Exception {
+        when(service.findById(1)).thenReturn(Optional.of(temporadaDTO));
 
         mockMvc.perform(get("/api/temporadas/1"))
                 .andExpect(status().isOk())
-                .andExpect(content().contentType(MediaType.APPLICATION_JSON))
-                .andExpect(jsonPath("$.idTemporada").value(1));
+                .andExpect(jsonPath("$.titulo").value("El despertar de los datos"));
     }
 
     @Test
-    public void testFindByIdNotFound() throws Exception {
-        when(service.findById(1)).thenReturn(Optional.empty());
+    void testFindById_NotFound() throws Exception {
+        when(service.findById(99)).thenReturn(Optional.empty());
 
-        mockMvc.perform(get("/api/temporadas/1"))
+        mockMvc.perform(get("/api/temporadas/99"))
                 .andExpect(status().isNotFound());
     }
 
     @Test
-    public void testCreate() throws Exception {
-        TemporadaDTO dto = new TemporadaDTO(null, 1, "Nueva Temporada");
-        TemporadaDTO savedDto = new TemporadaDTO(1, 1, "Nueva Temporada");
-
-        when(service.save(any())).thenReturn(savedDto);
+    void testCreate_Success() throws Exception {
+        when(service.save(any(TemporadaDTO.class))).thenReturn(temporadaDTO);
 
         mockMvc.perform(post("/api/temporadas")
                 .contentType(MediaType.APPLICATION_JSON)
-                .content(objectMapper.writeValueAsString(dto)))
+                .content(objectMapper.writeValueAsString(temporadaDTO)))
                 .andExpect(status().isOk())
                 .andExpect(jsonPath("$.idTemporada").value(1));
     }
 
     @Test
-    public void testUpdate() throws Exception {
-        TemporadaDTO dto = new TemporadaDTO(1, 1, "Temporada Actualizada");
-
-        when(service.findById(1)).thenReturn(Optional.of(dto));
-        when(service.save(any())).thenReturn(dto);
+    void testUpdate_Success() throws Exception {
+        when(service.update(eq(1), any(TemporadaDTO.class))).thenReturn(temporadaDTO);
 
         mockMvc.perform(put("/api/temporadas/1")
                 .contentType(MediaType.APPLICATION_JSON)
-                .content(objectMapper.writeValueAsString(dto)))
+                .content(objectMapper.writeValueAsString(temporadaDTO)))
                 .andExpect(status().isOk())
-                .andExpect(jsonPath("$.titulo").value("Temporada Actualizada"));
+                .andExpect(jsonPath("$.numeroTemporada").value(1));
     }
 
     @Test
-    public void testUpdateNotFound() throws Exception {
-        TemporadaDTO dto = new TemporadaDTO(1, 1, "Temporada");
-
-        when(service.findById(1)).thenReturn(Optional.empty());
+    void testUpdate_BadRequest_TipoInvalido() throws Exception {
+        // Simulamos el error de asignar temporadas a una Película
+        when(service.update(eq(1), any(TemporadaDTO.class)))
+                .thenThrow(new BadRequestException("No se puede crear una temporada para un contenido de tipo: Pelicula"));
 
         mockMvc.perform(put("/api/temporadas/1")
                 .contentType(MediaType.APPLICATION_JSON)
-                .content(objectMapper.writeValueAsString(dto)))
+                .content(objectMapper.writeValueAsString(temporadaDTO)))
+                .andExpect(status().isBadRequest());
+    }
+
+    @Test
+    void testUpdate_NotFound() throws Exception {
+        when(service.update(eq(99), any(TemporadaDTO.class)))
+                .thenThrow(new RuntimeException("Temporada no encontrada con id: 99"));
+
+        mockMvc.perform(put("/api/temporadas/99")
+                .contentType(MediaType.APPLICATION_JSON)
+                .content(objectMapper.writeValueAsString(temporadaDTO)))
                 .andExpect(status().isNotFound());
     }
 
     @Test
-    public void testDelete() throws Exception {
+    void testDelete() throws Exception {
         doNothing().when(service).deleteById(1);
 
         mockMvc.perform(delete("/api/temporadas/1"))
                 .andExpect(status().isNoContent());
-
-        verify(service, times(1)).deleteById(1);
     }
 }
